// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar render with firstname Femi lastname Adeojo size 32 and hasInitials true set to render status of shipment 1`] = `
<div
  class="relative"
  data-testid="avatar-test"
  style="height: 32px; width: 32px;"
>
  <div
    class="app-icon app-avatar-icon"
    style="width: 32px; height: 32px;"
  >
    <i>
      <svg
        height="1000px"
        viewBox="0 0 96 96"
        width="1000px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="96"
          width="96"
        />
        <g
          fill="#fff"
          style="opacity: 0.15;"
        >
          <path
            d="M68.25,41.25c-.61,11.6-8.47,21-20.25,21s-19.64-9.46-20.25-21L27,27.75c0-10.31,7.5-21,21-21,5,0,13.5,1.59,14.25,8.25,3.66.09,4.3,2.24,5.57,4.82S69,25,69,27.75Z"
          />
          <path
            d="M55.5,67.5l-7.5,9-7.5-9C24.66,69.37,8.22,76.63,3.56,83.73A7.83,7.83,0,0,0,2.25,87c0,.48-.44,4.18-.75,9h93c-.31-4.77-.75-8.62-.75-9a5.54,5.54,0,0,0-1.31-3.25C87.79,76.63,71.34,69.37,55.5,67.5Z"
          />
        </g>
      </svg>
    </i>
  </div>
  <span
    class="absolute top-0 left-0 w-full h-full text-center app-white [object Object]"
    data-testid="initials-test"
    style="line-height: 32px; font-size: 10.666666666666666px;"
  >
    FA
  </span>
</div>
`;

exports[`Avatar render with firstname James lastname Bond size 32 and hasInitials false set to render status of shipment 1`] = `
<div
  class="relative"
  data-testid="avatar-test"
  style="height: 32px; width: 32px;"
>
  <div
    class="app-icon app-avatar-icon"
    style="width: 32px; height: 32px;"
  >
    <i>
      <svg
        height="1000px"
        viewBox="0 0 96 96"
        width="1000px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="96"
          width="96"
        />
        <g
          fill="#fff"
          style="opacity: 0.15;"
        >
          <path
            d="M68.25,41.25c-.61,11.6-8.47,21-20.25,21s-19.64-9.46-20.25-21L27,27.75c0-10.31,7.5-21,21-21,5,0,13.5,1.59,14.25,8.25,3.66.09,4.3,2.24,5.57,4.82S69,25,69,27.75Z"
          />
          <path
            d="M55.5,67.5l-7.5,9-7.5-9C24.66,69.37,8.22,76.63,3.56,83.73A7.83,7.83,0,0,0,2.25,87c0,.48-.44,4.18-.75,9h93c-.31-4.77-.75-8.62-.75-9a5.54,5.54,0,0,0-1.31-3.25C87.79,76.63,71.34,69.37,55.5,67.5Z"
          />
        </g>
      </svg>
    </i>
  </div>
</div>
`;
